[project]
name = "lotto6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psycopg[binary]>=3.2.9",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.1.1",
    "reflex>=0.8.0",
    "seaborn>=0.13.2",
    "reflex-clerk-api>=1.0.1",
]

[tool.setuptools]
packages = ["lotto6"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
